updated tests to JUnit 5